@@ -1,1 +1,1 @@
-MD5 2cf2e1f1a82f3278e38260dabe8abf2f vdr-clock-0.0.4.tgz 16165
+MD5 a4da0c9aeba5543886e999b7421a8282 vdr-clock-0.0.4.tgz 16029
